--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "tracer"]
 	path = tracer
-	url = https://github.com/season-lab/qemu.git
-	branch = debug-ce
+	url = https://github.com/hsh814/qemu.git
+	branch = symbolic
 [submodule "solver/xxHash"]
 	path = solver/xxHash
 	url = https://github.com/Cyan4973/xxHash.git
