--- a/docker/fuzzolic-runner/Dockerfile.Ubuntu2004
+++ b/docker/fuzzolic-runner/Dockerfile.Ubuntu2004
@@ -6,7 +6,7 @@ RUN sed -i -- 's/# deb-src/deb-src/g' /etc/apt/sources.list && cat /etc/apt/sour
 RUN apt update -y && \
 	DEBIAN_FRONTEND=noninteractive apt-get build-dep -y qemu-user && \ 
 	DEBIAN_FRONTEND=noninteractive apt install -y \
-	clang nano \
+	clang emacs curl \
 	qemu-user git libglib2.0-dev libfdt-dev \
 	libpixman-1-dev zlib1g-dev libcapstone-dev \
 	strace cmake python3 libprotobuf-dev \
@@ -14,7 +14,7 @@ RUN apt update -y && \
 	libpng16-16 libjbig-dev \
 	build-essential libtool-bin python3-dev \
 	automake flex bison libglib2.0-dev \
-	libpixman-1-dev clang \
+	libpixman-1-dev \
 	python3-setuptools llvm wget \
 	llvm-dev g++ g++-multilib python3 \
 	python3-pip lsb-release gcc \
@@ -28,61 +28,43 @@ RUN apt update -y && \
 	apt clean && \
 	rm -rf /var/lib/apt/lists/*
 
-RUN groupadd --gid 1008 ubuntu \
-    && useradd --uid 1008 --gid ubuntu --shell /bin/bash --create-home ubuntu
 
-USER ubuntu
+# Install uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.local/bin:$PATH"
 
-RUN pip install --user virtualenv
-RUN python3 -m pip install --user pytest
+WORKDIR /root/fuzzolic
+COPY pyproject.toml uv.lock ./
 
-COPY --chown=1008:1008 . /home/ubuntu/fuzzolic
+RUN uv venv && uv sync
 
-WORKDIR /home/ubuntu/fuzzolic
+ENV VIRTUAL_ENV=/app/.venv
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+COPY . .
 
 # Build QEMU tracer
-RUN cd tracer && ./configure --prefix=`pwd`/../build --target-list=x86_64-linux-user && make -j `nproc` 
+RUN cd tracer && mkdir build && cd build && ../configure --target-list=x86_64-linux-user && make -j 32 
 
 # Build custom Z3
-RUN cd solver/fuzzy-sat/fuzzolic-z3 && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=`pwd`/dist && make -j `nproc` && make install
+RUN cd solver && mkdir build && cd build && cmake .. && make -j 32
 
 # Set environment vars for Z3
-ENV C_INCLUDE_PATH=/home/ubuntu/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/include
-ENV LIBRARY_PATH=/home/ubuntu/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib
-ENV LD_LIBRARY_PATH=/home/ubuntu/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib
-ENV BASH_ENV=/home/ubuntu/.bashrc
-RUN echo "export C_INCLUDE_PATH=/home/ubuntu/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/include" >> $BASH_ENV
-RUN echo "export LIBRARY_PATH=/home/ubuntu/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib" >> $BASH_ENV
-RUN echo "export LD_LIBRARY_PATH=/home/ubuntu/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib" >> $BASH_ENV
+ENV C_INCLUDE_PATH=/root/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/include
+ENV LIBRARY_PATH=/root/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib
+ENV LD_LIBRARY_PATH=/root/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib
+ENV BASH_ENV=/root/.bashrc
+RUN echo "export C_INCLUDE_PATH=/root/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/include" >> $BASH_ENV
+RUN echo "export LIBRARY_PATH=/root/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib" >> $BASH_ENV
+RUN echo "export LD_LIBRARY_PATH=/root/fuzzolic/solver/fuzzy-sat/fuzzolic-z3/build/dist/lib" >> $BASH_ENV
 
-# Create fuzzy-sat-CLI folder
-RUN cd solver/fuzzy-sat && \
-	git rev-parse HEAD > /tmp/revision && \
-	git checkout master && \
-	git submodule update && \
-	cd ../.. && \
-	cp -r solver/fuzzy-sat solver/fuzzy-sat-cli && \
-	rm solver/fuzzy-sat-cli/.git && \
-	cd solver/fuzzy-sat && \
-	git checkout `cat /tmp/revision` && \
-	git submodule update
-
-# Build fuzzy-sat-CLI
-RUN cd solver/fuzzy-sat-cli && make -j `nproc`
-
-# Build fuzzy-sat
-RUN cd solver/fuzzy-sat && make -j `nproc`
-
-# Build solver frontend
-RUN cd solver && cmake . && make -j `nproc`
 
 # Build AFL++
 RUN cd utils && git clone https://github.com/AFLplusplus/AFLplusplus.git && \
 	cd AFLplusplus && git checkout 2dac4e7 && \
 	git apply ../afl-showmap.c.patch && \
 	make -j `nproc` all && cd qemu_mode && ./build_qemu_support.sh
-ENV AFL_PATH=/home/ubuntu/fuzzolic/utils/AFLplusplus
-RUN echo "export AFL_PATH=/home/ubuntu/fuzzolic/utils/AFLplusplus" >> $BASH_ENV
+ENV AFL_PATH=/root/fuzzolic/utils/AFLplusplus
+RUN echo "export AFL_PATH=/root/fuzzolic/utils/AFLplusplus" >> $BASH_ENV
 
 # Build fuzzolic tests
 RUN cd tests && make
